--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@tailwindcss/postcss": "^4.0.0-beta.9",
+		"lucide-react": "^0.475.0",
 		"next": "15.1.4",
 		"next-auth": "^5.0.0-beta.25",
 		"react": "^19.0.0",
